--- a/styles.css
+++ b/styles.css
@@ -456,7 +456,7 @@ a{
 
   #project2{
     margin-left:120px;
-    background-image: url(.Screenshot\ 2024-03-14\ at\ 7.54.35\ PM.png);
+    background-image: url(gallery.png);
   }
   #project3{
     background-image: url(Project3.png);
